# XRDpy

./: .gitignore  LICENSE  README.md  XRDpy_GUI.py  __init__.py  cif.py  detector.py  experiment.py  plot.py  pyproject.toml  sample.py  utils.py
.github/workflows/: publish.yml
analysis/: __init__.py  differential_analysis.py  fitting.py
analysis/ESRF_ID09/: __init__.py  azimint.py
analysis/MaxIV_FemtoMAX/: azimint.py
analysis/Spring8_SACLA/: azimint.py  datared.py
analysis/_shared_2d/: __init__.py  azimint.py
analysis/common/: azimint_utils.py  fitting_utils.py  paths.py  plot_utils.py
simulation/: __init__.py  polycrystalline.py  single_crystal.py
src/trxrdpy/: __init__.py  cif.py  utils.py
src/trxrdpy.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/trxrdpy/analysis/: __init__.py  calibration.py  differential_analysis.py  fitting.py  gui.py
src/trxrdpy/analysis/ESRF_ID09/: __init__.py  azimint.py  datared.py
src/trxrdpy/analysis/MaxIV_FemtoMAX/: __init__.py  azimint.py  datared.py  datared_utils.py  ping_references_default.csv  single_shot_azimint.py
src/trxrdpy/analysis/Spring8_SACLA/: __init__.py  azimint.py  datared.py  single_shot_azimint.py
src/trxrdpy/analysis/Spring8_SACLA/pbs/: parallel_job_sender.sh  single_shot_1d_job_sender.sh
src/trxrdpy/analysis/_shared_2d/: __init__.py  azimint.py
src/trxrdpy/analysis/common/: __init__.py  azimint_utils.py  calibration_utils.py  differential_analysis_utils.py  fitting_utils.py  general_utils.py  paths.py  plot_utils.py
src/trxrdpy/analysis/gui/: __init__.py  defaults.py  main_window.py  runtime_guard.py  state.py  style.py  utils.py
src/trxrdpy/analysis/gui/services/: __init__.py  calibration_service.py  differential_service.py  facility_service.py  fitting_service.py  integration_service.py  path_service.py  preparation_service.py
src/trxrdpy/analysis/gui/tabs/: __init__.py  calibration_tab.py  differential_tab.py  fitting_tab.py  pattern_creation_tab.py  preparation_tab.py  session_tab.py  viewer_tab.py
src/trxrdpy/analysis/gui/widgets/: __init__.py  experiment_widgets.py  facility_widgets.py  log_widget.py  multi_experiment_widgets.py  parameter_widgets.py  path_widgets.py  polarization_widget.py  task_output_dialog.py
src/trxrdpy/simulation/: __init__.py  cif.py  detector.py  diffractometers.py  experiment.py  geometry.py  gui.py  plot.py  polycrystalline.py  poni.py  sample.py  single_crystal.py  utils.py
src/trxrdpy/simulation/gui/: __init__.py  main_window.py  state.py  style.py
src/trxrdpy/simulation/gui/services/: __init__.py  path_service.py  simulation_service.py
src/trxrdpy/simulation/gui/tabs/: __init__.py  polycrystalline_tab.py  single_crystal_tab.py
src/trxrdpy/simulation/gui/widgets/: __init__.py  geometry_panel.py  matrix_rotation_window.py  path_widgets.py
tests/: test_calibration_2d_cake.py  test_femtomax_ping_reference_precision.py  test_femtomax_single_shot_1d.py  test_gui_background_tasks.py  test_id09_datared_io.py  test_sacla_single_shot_1d.py  test_simulation_gui_backend.py
