[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trxrdpy"
version = "2.1.1"
description = "Python toolkit for time-resolved X-ray diffraction simulation and beamline-dependent analysis workflows."
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
license = "CC-BY-4.0"
license-files = ["LICENSE"]
authors = [
  { name = "Julio Guzman-Brambila" }
]
keywords = [
  "xrd",
  "time-resolved xrd",
  "pump-probe",
  "x-ray diffraction",
  "diffraction",
  "materials science",
  "simulation",
  "beamline analysis",
  "pyFAI"
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
dependencies = [
  "numpy>=2.4",
  "scipy>=1.10",
  "matplotlib>=3.10",
  "pandas>=2.1",
  "h5py>=3.9",
  "tqdm>=4.66",
  "lmfit>=1.3",
  "pyFAI>=2024.1",
  "fabio>=2024.4",
  "PyCifRW>=5.0",
  "xrayutilities>=1.7",
]

[project.optional-dependencies]
analysis = [
  "pytxs==0.0.2",
]
gui = [
  "PyQt5>=5.15",
]
dev = [
  "build>=1.2",
  "twine>=5.0",
]

[project.gui-scripts]
trxrdpy-analysis-gui = "trxrdpy.analysis.gui:main"
trxrdpy-sim-gui = "trxrdpy.simulation.gui:main"

[project.urls]
Homepage = "https://github.com/julioguzmanb/XRDpy"
Repository = "https://github.com/julioguzmanb/XRDpy"
Documentation = "https://github.com/julioguzmanb/XRDpy"
DOI = "https://doi.org/10.5281/zenodo.18634909"
Issues = "https://github.com/julioguzmanb/XRDpy/issues"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["trxrdpy", "trxrdpy.*"]

[tool.setuptools.package-data]
"trxrdpy.analysis.Spring8_SACLA" = ["pbs/*.sh"]
